--- a/.github/workflows/pr_lint.yml
+++ b/.github/workflows/pr_lint.yml
@@ -40,6 +40,7 @@ jobs:
             sdk-py
             docs
             ci
+            deps
           requireScope: false
           ignoreLabels: |
             ignore-lint-pr-title
