--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,4 +6,4 @@ contact_links:
     about: Report an issue related to the LangGraph documentation
   - name: LangChain Forum
     url:  https://forum.langchain.com/
-    about: General community discussions, support, and feature requests
+    about: General community discussions and support
