--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 version: 2.1
 contact_links:
   - name: Documentation
-    url: https://github.com/langchain-ai/docs/issues/new
+    url: https://github.com/langchain-ai/docs/issues/new?template=langgraph.yml
     about: Report an issue related to the LangGraph documentation
   - name: LangChain Forum
     url:  https://forum.langchain.com/
