fix: resolve CI failures and implement dynamic versioning
- Fixed setuptools-scm configuration for proper dynamic versioning
- Added missing psycopg[binary] dependency for PostgreSQL support
- Created cache module in main langgraph library to resolve import issues
- Copied necessary modules (checkpoint, store, prebuilt) to main langgraph library
- Updated conftest.py to remove references to non-existent SqliteCache
- Fixed import statements and code formatting
- All tests now pass locally

Resolves CI failures from run #17130662994

--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -114,8 +114,9 @@ addopts = "--full-trace --strict-markers --strict-config --durations=5 --snapsho
 ignore-words-list = "infor,thead,stdio,nd,jupyter,lets,lite,uis,deque,langgraph,langchain,pydantic,typing,async,await,coroutine,iterable,iterables,serializable,deserializable,checkpointer,checkpointing,stateful,statefulness,prebuilt,prebuilt,supervisor,supervisory,swarm,swarming,multiactor,multiactors,subgraph,subgraphs,workflow,workflows,streaming,streamable,streamed,streamer,streamers,streaming,streamable,streamed,streamer,streamers"
 
 [tool.setuptools_scm]
-write_to = "langgraph/about.py"
+write_to = "libs/langgraph/langgraph/about.py"
 write_to_template = "__version__ = '{version}'"
+root = "../.."
 
 [tool.setuptools.packages.find]
 where = ["."]
