--- a/libs/prebuilt/pyproject.toml
+++ b/libs/prebuilt/pyproject.toml
@@ -14,6 +14,7 @@ license-files = ['LICENSE']
 dependencies = [
     "langgraph-checkpoint>=2.1.0,<3.0.0",
     "langchain-core>=0.3.67",
+    "psycopg[binary]>=3.2.9",
 ]
 
 [project.urls]
