--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -7,14 +7,14 @@ name = "langgraph-docs"
 version = "0.0.1"
 description = "LangGraph docs"
 authors = []
-requires-python = "~=3.11"
+requires-python = ">=3.11.0,<4.0.0"
 readme = "README.md"
 license = "MIT"
 dependencies = [
     "aiohappyeyeballs==2.4.3",
-    "hub>=3.0.1,<4",
-    "xxhash>=3.5.0,<4",
-    "black>=25.1.0,<26",
+    "hub>=3.0.1,<4.0.0",
+    "xxhash>=3.5.0,<4.0.0",
+    "black>=25.1.0,<26.0.0",
 ]
 
 [dependency-groups]
