--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -37,7 +37,7 @@ dev = [
     "jupyter",
     "pytest-xdist[psutil]",
     "pytest-repeat",
-    "langchain-core==1.0.0a1",
+    "langchain-core>=1.0.0a1,<2.0.0",
     "langgraph-prebuilt",
     "langgraph-checkpoint",
     "langgraph-checkpoint-sqlite",
