--- a/libs/checkpoint/pyproject.toml
+++ b/libs/checkpoint/pyproject.toml
@@ -7,7 +7,7 @@ name = "langgraph-checkpoint"
 version = "2.1.2"
 description = "Library with base interfaces for LangGraph checkpoint savers."
 authors = []
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
 license-files = ['LICENSE']
@@ -49,8 +49,10 @@ lint.select = [
   "UP", # pyupgrade
   "B",  # flake8-bugbear
   "I",  # isort
+  "UP", # pyupgrade
 ]
 lint.ignore = ["E501", "B008"]
+target-version = "py310"
 
 [tool.pytest-watcher]
 now = true
