--- a/libs/cli/pyproject.toml
+++ b/libs/cli/pyproject.toml
@@ -7,7 +7,7 @@ name = "langgraph-cli"
 dynamic = ["version"]
 description = "CLI for interacting with LangGraph API"
 authors = []
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
 license-files = ['LICENSE']
@@ -59,5 +59,7 @@ lint.select = [
   "UP", # pyupgrade
   "B",  # flake8-bugbear
   "I",  # isort
+  "UP", # pyupgrade
 ]
 lint.ignore = ["E501", "B008"]
+target-version = "py310"
