--- a/libs/prebuilt/pyproject.toml
+++ b/libs/prebuilt/pyproject.toml
@@ -53,8 +53,9 @@ addopts = "--strict-markers --strict-config --durations=5 -vv"
 asyncio_mode = "auto"
 
 [tool.ruff]
-lint.select = [ "E", "F", "I", "TID251" ]
+lint.select = [ "E", "F", "I", "TID251", "UP" ]
 lint.ignore = [ "E501" ]
+target-version = "py310"
 
 [tool.pytest-watcher]
 now = true
