--- a/libs/sdk-py/pyproject.toml
+++ b/libs/sdk-py/pyproject.toml
@@ -7,7 +7,7 @@ name = "langgraph-sdk"
 dynamic = ["version"]
 description = "SDK for interacting with LangGraph API"
 authors = []
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
 license-files = ['LICENSE']
@@ -51,5 +51,7 @@ lint.select = [
   "B",  # flake8-bugbear
   "I",  # isort
   "ARG", # flake8-unused-arguments
+  "UP", # pyupgrade
 ]
 lint.ignore = ["E501", "B008"]
+target-version = "py310"
