--- a/examples/travel_planning_system/.env.sample
+++ b/examples/travel_planning_system/.env.sample
@@ -1,13 +1,22 @@
-# Required Azure OpenAI configuration
-AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-AZURE_OPENAI_API_KEY=replace-me
-AZURE_OPENAI_DEPLOYMENT=your-deployment-name
+# Azure OpenAI (required)
+AZURE_OPENAI_ENDPOINT=https://<your-resource>.openai.azure.com/
+AZURE_OPENAI_API_KEY=<your-key>
 AZURE_OPENAI_API_VERSION=2024-05-01-preview
+AZURE_DEPLOYMENT_NAME=gpt-4o
 
-# Optional tracing with Azure Application Insights
-# Example: APPLICATION_INSIGHTS_CONNECTION_STRING=InstrumentationKey=...;IngestionEndpoint=...
-APPLICATION_INSIGHTS_CONNECTION_STRING=
+# Optional: fallback to OpenAI
+# OPENAI_API_KEY=<your-openai-key>
 
-# Optional: forward traces to a custom OpenTelemetry collector
-OTEL_EXPORTER_OTLP_ENDPOINT=
-OTEL_SERVICE_NAME=travel-planning-system
+# Observability (optional but recommended)
+APPLICATION_INSIGHTS_CONNECTION_STRING=InstrumentationKey=...;IngestionEndpoint=...
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_SERVICE_NAME=enhanced-multi-agent-travel
+AZURE_TRACING_GEN_AI_CONTENT_RECORDING_ENABLED=true
+
+# External data APIs (all optional – sample falls back to curated data)
+OPENWEATHER_API_KEY=<weather-key>
+AMADEUS_API_KEY=<amadeus-key>
+AMADEUS_API_SECRET=<amadeus-secret>
+EXCHANGERATE_API_KEY=<exchangerate-key>
+FOURSQUARE_API_KEY=<foursquare-key>
+EVENTBRITE_TOKEN=<eventbrite-token>
