--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "langgraph"
-version = "1.0.0a4"
+version = "1.0.0rc1"
 description = "Building stateful, multi-actor applications with LLMs"
 authors = []
 requires-python = ">=3.10"
@@ -15,7 +15,7 @@ dependencies = [
     "langchain-core>=0.1",
     "langgraph-checkpoint>=2.1.0,<3.0.0",
     "langgraph-sdk>=0.2.2,<0.3.0",
-    "langgraph-prebuilt==0.7.0a2",
+    "langgraph-prebuilt==0.7.0rc1",
     "xxhash>=3.5.0",
     "pydantic>=2.7.4",
 ]
