--- a/.github/workflows/_lint.yml
+++ b/.github/workflows/_lint.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         if: steps.changed-files.outputs.all
         working-directory: ${{ inputs.working-directory }}
-        run: uv sync --frozen --group dev
+        run: uv sync --frozen --group lint
 
       - name: Get .mypy_cache to speed up mypy
         if: steps.changed-files.outputs.all
@@ -74,7 +74,7 @@ jobs:
       - name: Install test dependencies
         if: steps.changed-files.outputs.all
         working-directory: ${{ inputs.working-directory }}
-        run: uv sync --group dev
+        run: uv sync --group lint
 
       - name: Get .mypy_cache_test to speed up mypy
         if: steps.changed-files.outputs.all
