--- a/libs/cli/pyproject.toml
+++ b/libs/cli/pyproject.toml
@@ -31,15 +31,21 @@ Repository = "https://www.github.com/langchain-ai/langgraph"
 langgraph = "langgraph_cli.cli:cli"
 
 [dependency-groups]
-dev = [
-    "ruff",
-    "codespell",
+test = [
     "pytest",
     "pytest-asyncio",
     "pytest-mock",
     "pytest-watch",
-    "mypy",
     "msgspec",
+]
+lint = [
+    "ruff",
+    "codespell",
+    "mypy",
+]
+dev = [
+    {include-group = "test"},
+    {include-group = "lint"},
 ]
 
 [tool.uv]
