--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         shell: bash
         working-directory: ${{ inputs.working-directory }}
-        run: uv sync --frozen --group test
+        run: uv sync --frozen --group test --no-dev
 
       - name: Run tests
         shell: bash
