--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -58,8 +58,8 @@ test = [
     "pyperf",
     "py-spy",
     "pycryptodome",
+    "langgraph-cli; python_version < '3.14'",
     "langgraph-cli[inmem]; python_version < '3.14'",
-    "langgraph-cli; python_version >= '3.14'",
     "redis",
 ]
 lint = [
@@ -73,9 +73,6 @@ dev = [
     "jupyter",
 ]
 
-
-[tool.uv]
-default-groups = ['dev']
 
 [tool.uv.sources]
 langgraph-prebuilt = { path = "../prebuilt", editable = true }
