--- a/.github/workflows/_test_langgraph.yml
+++ b/.github/workflows/_test_langgraph.yml
@@ -16,6 +16,7 @@ jobs:
           - "3.11"
           - "3.12"
           - "3.13"
+          - "3.14"
 
     defaults:
       run:
@@ -38,7 +39,7 @@ jobs:
 
       - name: Install dependencies
         shell: bash
-        run: uv sync --frozen --group dev
+        run: uv sync --frozen --group test --no-dev
 
       - name: Run tests
         shell: bash
