--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -11,6 +11,19 @@ requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
 license-files = ['LICENSE']
+classifiers = [
+    'Development Status :: 5 - Production/Stable',
+    'Programming Language :: Python',
+    'Programming Language :: Python :: Implementation :: CPython',
+    'Programming Language :: Python :: Implementation :: PyPy',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3 :: Only',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
+    'Programming Language :: Python :: 3.14',
+]
 dependencies = [
     "langchain-core>=0.1",
     "langgraph-checkpoint>=2.1.0,<3.0.0",
@@ -24,7 +37,7 @@ dependencies = [
 Repository = "https://www.github.com/langchain-ai/langgraph"
 
 [dependency-groups]
-dev = [
+test = [
     "pytest",
     "pytest-cov",
     "pytest-dotenv",
@@ -32,9 +45,6 @@ dev = [
     "syrupy",
     "httpx",
     "pytest-watcher",
-    "mypy",
-    "ruff",
-    "jupyter",
     "pytest-xdist[psutil]",
     "pytest-repeat",
     "langchain-core==1.0.0a1",
@@ -47,14 +57,22 @@ dev = [
     "uvloop==0.21.0beta1",
     "pyperf",
     "py-spy",
-    "types-requests",
     "pycryptodome",
-    "langgraph-cli[inmem]",
+    "langgraph-cli; python_version < '3.14'",
+    "langgraph-cli[inmem]; python_version < '3.14'",
     "redis",
 ]
+lint = [
+    "mypy",
+    "ruff",
+    "types-requests",
+]
+dev = [
+    {include-group = "test"},
+    {include-group = "lint"},
+    "jupyter",
+]
 
-[tool.uv]
-default-groups = ['dev']
 
 [tool.uv.sources]
 langgraph-prebuilt = { path = "../prebuilt", editable = true }
