--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,21 +1,21 @@
 name: "\U0001F41B Bug Report"
 description: Report a bug in LangGraph. To report a security issue, please instead use the security option below. For questions, please use the LangChain Forum at forum.langchain.com.
-labels: [pending,bug]
+labels: [pending, bug]
 body:
   - type: markdown
     attributes:
       value: |
         Thank you for taking the time to file a bug report. 
-        
+
         Use this to report BUGS in LangGraph. For usage questions, feature requests and general design questions, please use the [LangChain Forum](https://forum.langchain.com/).
-        
+
         Relevant links to check before filing a bug report to see if your issue has already been reported, fixed or
         if there's another way to solve your problem:
-        
+
         * [LangChain Forum](https://forum.langchain.com/),
         * [LangGraph Github Issues](https://github.com/langchain-ai/langgraph/issues),
         * [LangGraph how-to guides](https://langchain-ai.github.io/langgraph/how-tos/).
-        * [LangChain documentation with the integrated search](https://python.langchain.com/docs/get_started/introduction),
+        * [LangChain documentation with the integrated search](https://docs.langchain.com/),
         * [GitHub search](https://github.com/langchain-ai/langgraph),
   - type: checkboxes
     id: checks
