--- a/libs/checkpoint-kusto/pyproject.toml
+++ b/libs/checkpoint-kusto/pyproject.toml
@@ -14,9 +14,10 @@ license-files = ['LICENSE']
 dependencies = [
   "langgraph-checkpoint>=2.1.2,<4.0.0",
   "orjson>=3.10.1",
-  "azure-kusto-data>=4.3.1",
+  "azure-kusto-data[aio]>=4.3.1",
   "azure-kusto-ingest>=4.3.1",
   "azure-identity>=1.15.0",
+  "aiohttp>=3.8.0",
 ]
 
 [project.urls]
