--- a/libs/cli/pyproject.toml
+++ b/libs/cli/pyproject.toml
@@ -25,7 +25,10 @@ inmem = [
 ]
 
 [project.urls]
-Repository = "https://www.github.com/langchain-ai/langgraph"
+Source = "https://github.com/langchain-ai/langgraph/tree/main/libs/cli"
+Twitter = "https://x.com/LangChainAI"
+Slack = "https://www.langchain.com/join-community"
+Reddit = "https://www.reddit.com/r/LangChain/"
 
 [project.scripts]
 langgraph = "langgraph_cli.cli:cli"
