--- a/libs/cli/examples/graph_prerelease_reqs/pyproject.toml
+++ b/libs/cli/examples/graph_prerelease_reqs/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "langchain-openai==1.0.0a2",
-  "langchain-anthropic==1.0.0.a5",
+  "langchain-anthropic==1.0.0a5",
   "langgraph==1.0.2"
 ]
 
