Add mypy unit test

--- a/libs/sdk-py/pyproject.toml
+++ b/libs/sdk-py/pyproject.toml
@@ -28,6 +28,7 @@ lint = ["ruff", "codespell", "mypy"]
 dev = [
   { include-group = "test" },
   { include-group = "lint" },
+  "mypy>=1.18.2",
   "pydantic>=2.12.4",
 ]
 
